# libtorch_semantic_segmentation

./: README.md
hello_world/: CMakeLists.txt  main.cpp
semantic_segmentation/: CMakeLists.txt  main.cpp
